--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -299,6 +299,7 @@ img {
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
 }
 
 .home__social-icon {
@@ -358,7 +359,10 @@ img {
 }
 
 .home__data {
-  grid-column: 1/3;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .home__title {
